tests/baselines/reference/parserES5ForOfStatement12.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement12.ts(1,22): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement12.ts (1 errors) ====
    for (const {a, b} of X) {
                         ~
!!! error TS2304: Cannot find name 'X'.
    }